@startuml 
title Component diagram

component ImageCapture

component CueDetector

component ChangeDetector

component BallDetector

component BoundaryDetector

component UserInterface

component AidController

component ImageDrawer

component TrajectoryCalculator

component Visualizer

interface IVisual
interface ICapture
interface IDetector
interface ITrajectory
interface IUserInterface
interface IImageDrawer

AidController --( ITrajectory
ITrajectory -- TrajectoryCalculator

Visualizer --( IImageDrawer
IImageDrawer -- ImageDrawer

CueDetector -- IDetector
ChangeDetector-- IDetector
BallDetector -- IDetector
BoundaryDetector -- IDetector

ICapture )-- CueDetector
ICapture )-- BallDetector
ICapture )-- ChangeDetector
ICapture )-- BoundaryDetector

IUserInterface )- AidController
UserInterface - IUserInterface
IDetector )-- UserInterface

AidController -( IVisual
IVisual - Visualizer

IDetector )-- AidController

ImageCapture -- ICapture
@enduml